Remove `float-left` to fix layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,6 @@ button {
 }
 
 .temp-box {
-  float: left;
   margin: 0;
   padding: 1rem 0.8rem;
   text-align: left;
